# relude

./: .ghci  .gitignore  .headroom.yaml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  Symbols.md  all_stack.sh  appveyor.yml  protolude.cabal  relude.cabal  shell.nix  stack-7.10.3.yaml  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.2.yaml  stack-liquid.yaml  stack-nightly.yaml  stack.yaml  test_stack_lts.sh  universum.cabal
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
benchmark/: Main.hs
docs/: Applicative.md  Applicative.rst  Bifunctor.md  Bits.md  Bool.md  Bool.rst  Concurrency.md  Debug.md  Either.rst  Exceptions.md  Exceptions.rst  Files.md  Folds.md  Function.md  Function.rst  Functor.md  Hashing.md  Index.md  List.md  List.rst  Makefile  Maybe.md  Maybe.rst  Monad.md  Monad.rst  Monoid.md  Numbers.md  Reader.md  ST.md  State.md  Strings.md  Transformers.md  Traversals.md  Tuple.md  TypeLevel.md  TypeLevel.rst  Unsafe.md  conf.py  index.rst
hlint/: Rule.dhall  hlint.dhall  warn.dhall
src/: Applicative.hs  Base.hs  Bifunctor.hs  Bool.hs  Concurrent.hs  Container.hs  Containers.hs  Conv.hs  Debug.hs  Either.hs  Exceptions.hs  Functor.hs  Lifted.hs  List.hs  Monad.hs  Nub.hs  Panic.hs  Print.hs  Protolude.hs  Relude.hs  Semiring.hs  Show.hs  String.hs  TypeOps.hs  Universum.hs  Unsafe.hs  VarArg.hs
src/Container/: Class.hs  Reexport.hs
src/Lifted/: Concurrent.hs  Env.hs  File.hs  IORef.hs
src/Monad/: Either.hs  Maybe.hs  Trans.hs
src/Relude/: Applicative.hs  Base.hs  Bifoldable.hs  Bitraversable.hs  Bool.hs  Container.hs  Debug.hs  DeepSeq.hs  Enum.hs  Exception.hs  Extra.hs  File.hs  Foldable.hs  Function.hs  Functor.hs  Lifted.hs  List.hs  Monad.hs  Monoid.hs  Nub.hs  Numeric.hs  Print.hs  String.hs  Unsafe.hs
src/Relude/Bool/: Extra.hs  Guard.hs  Reexport.hs
src/Relude/Container/: Map.hs  One.hs  Reexport.hs
src/Relude/Extra/: Bifunctor.hs  CallStack.hs  Enum.hs  Foldable.hs  Foldable1.hs  Group.hs  Lens.hs  Map.hs  Newtype.hs  Tuple.hs  Type.hs  Types.hs  Validation.hs
src/Relude/Foldable/: Fold.hs  Reexport.hs
src/Relude/Functor/: Fmap.hs  Reexport.hs
src/Relude/Lifted/: Concurrent.hs  Env.hs  Exit.hs  File.hs  Handle.hs  IORef.hs  Terminal.hs
src/Relude/List/: NonEmpty.hs  Reexport.hs  Safe.hs
src/Relude/Monad/: Either.hs  Maybe.hs  Reexport.hs  Trans.hs
src/Relude/String/: Conversion.hs  Reexport.hs
src/Universum/: Applicative.hs  Base.hs  Bool.hs  Container.hs  Debug.hs  DeepSeq.hs  Exception.hs  Exceptions.hs  Foldable.hs  Function.hs  Functor.hs  Lifted.hs  List.hs  Monad.hs  Monoid.hs  Nub.hs  Print.hs  String.hs  TypeOps.hs  Unsafe.hs  VarArg.hs
src/Universum/Bool/: Guard.hs  Reexport.hs
src/Universum/Container/: Class.hs  Map.hs  One.hs  Reexport.hs
src/Universum/Extra/: Bifunctor.hs  Enum.hs  Group.hs
src/Universum/Foldable/: Fold.hs  Reexport.hs
src/Universum/Functor/: Compose.hs  Fmap.hs  Reexport.hs
src/Universum/Lifted/: Concurrent.hs  Env.hs  Exit.hs  File.hs  IORef.hs  ST.hs
src/Universum/List/: Reexport.hs  Safe.hs
src/Universum/Monad/: Container.hs  Either.hs  Maybe.hs  Reexport.hs  Trans.hs
src/Universum/String/: Conversion.hs  Reexport.hs
test/: Doctest.hs  Spec.hs
test/Test/Relude/: Gen.hs  Property.hs
test/Test/Relude/Container/: One.hs
test/Test/Relude/Extra/Validation/: Property.hs
test/Test/Universum/: Property.hs
