name:                protolude
version:             0.1.8
synopsis:            A sensible set of defaults for writing custom Preludes.
description:         A sensible set of defaults for writing custom Preludes.
homepage:            https://github.com/sdiehl/protolude
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
tested-with:         
  GHC == 7.6.1,
  GHC == 7.6.2,
  GHC == 7.6.3,
  GHC == 7.8.1,
  GHC == 7.8.2,
  GHC == 7.8.3,
  GHC == 7.8.4,
  GHC == 7.10.1,
  GHC == 7.10.2,
  GHC == 7.10.3
Bug-Reports:         https://github.com/sdiehl/protolude/issues

description:
    A sensible set of defaults for writing custom Preludes.
Source-Repository head
    type: git
    location: git@github.com:sdiehl/protolude.git

library
  exposed-modules:     
    Protolude
    Unsafe
    Base
    Applicative
    Bool
    Debug
    List
    Monad
    Show
    Conv
    Either
    Functor
    Semiring
    Bifunctor
    Exceptions
    Panic

  other-modules:

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    FlexibleContexts
    MultiParamTypeClasses

  ghc-options:
    -Wall
    -fwarn-implicit-prelude

  build-depends:       
    base             >= 4.6  && <4.10,
    ghc-prim         >= 0.3  && <0.6,
    safe             >= 0.3  && <0.4,
    async            >= 2.1  && <2.2,
    deepseq          >= 1.3  && <1.5,
    containers       >= 0.5  && <0.6,
    mtl              >= 2.1  && <2.3,
    transformers     >= 0.4  && <0.6,
    text             >= 1.2  && <1.3,
    stm              >= 2.4  && <2.5,
    bytestring       >= 0.10 && <0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
