name:                universum
version:             0.7.1
synopsis:            Custom prelude used in Serokell
description:         Custom prelude used in Serokell
homepage:            https://github.com/serokell/universum
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl, @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016-2016 Stephen Diehl, 2016-2017 Serokell
category:            Prelude
stability:           well...
build-type:          Simple
extra-source-files:  CHANGES.md
cabal-version:       >=1.10
bug-reports:         https://github.com/serokell/universum/issues
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.1
                   , GHC == 8.0.2
                   , GHC == 8.2.1

source-repository head
  type:     git
  location: git@github.com:serokell/universum.git

library
  hs-source-dirs:      src
  exposed-modules:
                       Universum

                       Applicative
                       Base
                       Bool
                       Containers
                       Conv
                       Debug
                       Exceptions
                       Functor
                       List
                       Nub
                       Print
                       TypeOps
                       Unsafe
                       VarArg

                       Lifted
                         Lifted.Concurrent
                         Lifted.Env
                         Lifted.File
                         Lifted.IORef

                       Monad
                         Monad.Either
                         Monad.Maybe
                         Monad.Trans

  ghc-options:         -Wall -fwarn-implicit-prelude

  build-depends:       base > 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , exceptions
                     , ghc-prim
                     , hashable
                     , microlens
                     , microlens-mtl
                     , mtl
                     , safe
                     , safe-exceptions
                     , stm
                     , text
                     , text-format
                     , transformers
                     , type-operators
                     , unordered-containers
                     , utf8-string
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

benchmark universum-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , universum
                     , containers
                     , criterion
                     , deepseq
                     , hashable
                     , mtl
                     , semigroups
                     , text
                     , unordered-containers