name:                universum
version:             1.0.0
synopsis:            Custom prelude used in Serokell
description:         Custom prelude used in Serokell
homepage:            https://github.com/serokell/universum
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl, @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 Stephen Diehl, 2016-2017 Serokell
category:            Prelude
stability:           stable
build-type:          Simple
extra-source-files:  CHANGES.md
cabal-version:       >=1.10
bug-reports:         https://github.com/serokell/universum/issues
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.1
                   , GHC == 8.0.2
                   , GHC == 8.2.2

source-repository head
  type:     git
  location: git@github.com:serokell/universum.git

library
  hs-source-dirs:      src
  exposed-modules:
                       Universum
                           Universum.Applicative
                           Universum.Base
                           Universum.Bool
                               Universum.Bool.Guard
                               Universum.Bool.Reexport
                           Universum.Container
                               Universum.Container.Class
                               Universum.Container.Reexport
                           Universum.Debug
                           Universum.DeepSeq
                           Universum.Exception
                           Universum.Function
                           Universum.Functor
                               Universum.Functor.Fmap
                               Universum.Functor.Reexport
                           Universum.Lifted
                               Universum.Lifted.Concurrent
                               Universum.Lifted.Env
                               Universum.Lifted.File
                               Universum.Lifted.IORef
                               Universum.Lifted.ST
                           Universum.List
                               Universum.List.Reexport
                               Universum.List.Safe
                           Universum.Monad
                               Universum.Monad.Container
                               Universum.Monad.Either
                               Universum.Monad.Maybe
                               Universum.Monad.Reexport
                               Universum.Monad.Trans
                           Universum.Monoid
                           Universum.Nub
                           Universum.Print
                           Universum.String
                               Universum.String.Conversion
                               Universum.String.Reexport
                           Universum.TypeOps
                           Universum.VarArg

  ghc-options:         -Wall -fwarn-implicit-prelude

  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , ghc-prim
                     , hashable
                     , microlens
                     , microlens-mtl
                     , mtl
                     , safe-exceptions
                     , stm
                     , text
                     , text-format
                     , transformers
                     , type-operators
                     , unordered-containers
                     , utf8-string
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

benchmark universum-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base < 5
                     , universum
                     , containers
                     , criterion
                     , deepseq
                     , hashable
                     , mtl
                     , semigroups
                     , text
                     , unordered-containers