name:                universum
version:             1.2.0
synopsis:            Custom prelude used in Serokell
description:         See README.md file for more details.
homepage:            https://github.com/serokell/universum
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl, @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 Stephen Diehl, 2016-2018 Serokell
category:            Prelude
stability:           stable
build-type:          Simple
cabal-version:       >=1.18
bug-reports:         https://github.com/serokell/universum/issues
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.2
extra-doc-files:     CHANGES.md
                   , CONTRIBUTING.md
                   , README.md

source-repository head
  type:     git
  location: git@github.com:serokell/universum.git

library
  hs-source-dirs:      src
  exposed-modules:
                       Universum
                           Universum.Applicative
                           Universum.Base
                           Universum.Bool
                               Universum.Bool.Guard
                               Universum.Bool.Reexport
                           Universum.Container
                               Universum.Container.Class
                               Universum.Container.Reexport
                           Universum.Debug
                           Universum.DeepSeq
                           Universum.Exception
                           Universum.Function
                           Universum.Functor
                               Universum.Functor.Fmap
                               Universum.Functor.Reexport
                           Universum.Lifted
                               Universum.Lifted.Concurrent
                               Universum.Lifted.Env
                               Universum.Lifted.File
                               Universum.Lifted.IORef
                               Universum.Lifted.ST
                           Universum.List
                               Universum.List.Reexport
                               Universum.List.Safe
                           Universum.Monad
                               Universum.Monad.Container
                               Universum.Monad.Either
                               Universum.Monad.Maybe
                               Universum.Monad.Reexport
                               Universum.Monad.Trans
                           Universum.Monoid
                           Universum.Nub
                           Universum.Print
                           Universum.String
                               Universum.String.Conversion
                               Universum.String.Reexport
                           Universum.TypeOps
                           Universum.Unsafe
                           Universum.VarArg

  ghc-options:         -Wall -fwarn-implicit-prelude

  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , ghc-prim >= 0.4.0.0
                     , hashable
                     , microlens
                     , microlens-mtl
                     , mtl
                     , safe-exceptions
                     , stm
                     , text
                     , transformers
                     , type-operators
                     , unordered-containers
                     , utf8-string
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

test-suite universum-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:       Test.Universum.Property

  build-depends:       base             >= 4.8 && < 5
                     , universum
                     , bytestring
                     , text
                     , utf8-string
                     , hedgehog
                     , tasty
                     , tasty-hedgehog

  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

test-suite universum-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs

  build-depends:       base >= 4.8 && < 5
                     , doctest
                     , Glob

  ghc-options:         -threaded
  default-language:    Haskell2010

benchmark universum-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base < 5
                     , universum
                     , containers
                     , gauge
                     , unordered-containers
  if impl(ghc == 7.10.3)
     build-depends:   semigroups >= 0.18

  default-extensions:  NoImplicitPrelude
                       ScopedTypeVariables
